--- a/landing/public/index.html
+++ b/landing/public/index.html
@@ -51,10 +51,30 @@
     />
     <style type="text/css">
       #mc_embed_signup {
-        background: #fff;
-        clear: left;
+        background: #FFF6F4;
         font: 14px Helvetica, Arial, sans-serif;
         width: 100%;
+        height: 332px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .mc_embed_signup--submit {
+        width: 131px;
+        height: 48px;
+        left: 906px;
+        top: 2842px;
+        background: #D94A3D;
+        border-radius: 100px;
+        border: none;
+        font-family: Helvetica;
+        font-size: 16px;
+        line-height: 36px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #FFFFFF;
       }
 
       /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
