--- a/landing/public/index.html
+++ b/landing/public/index.html
@@ -60,6 +60,44 @@
         align-items: center;
       }
 
+      #mc_embed_signup_scroll {
+        text-align: left;
+      }
+
+      .mc_embed_signup--title {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 24px;
+        color: #011F26;
+        margin-bottom: 16px;
+      }
+
+      .mc_embed_signup--input-container {
+        display: flex;
+      }
+    
+      .mc_embed_signup--label {
+        text-align: left;
+        font-size: 14px !important;
+      }
+
+      .mc_embed_signup--input-name {
+        margin-bottom: 24px;
+      }
+      .mc_embed_signup--input-name,
+      .mc_embed_signup--input-email {
+        width: 488px;
+        height: 48px;
+        background: #FFFFFF;
+        border: 1px solid #BDBDBD;
+        box-sizing: border-box;
+        border-radius: 4px;
+        padding-left: 16px;
+        font-size: 14px;
+        line-height: 22px;
+      }
+
       .mc_embed_signup--submit {
         width: 131px;
         height: 48px;
@@ -75,6 +113,7 @@
         justify-content: center;
         align-items: center;
         color: #FFFFFF;
+        margin-left: 15px;
       }
 
       /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
