--- a/landing/public/index.html
+++ b/landing/public/index.html
@@ -33,7 +33,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>日本インサイド</title>
+    <title>Japan Insider</title>
     <link
       href="https://fonts.googleapis.com/css?family=Noto+Sans"
       rel="stylesheet"
